force-app/main/default/objects/Negoptim__Sup_NS_Brand__c/fields/Negoptim__Supplier__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Supplier__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Negoptim__Supplier__c</referenceTo>
    <relationshipLabel>Supplier Nego scope Brands</relationshipLabel>
    <relationshipName>Supplier_Nego_scope_Brands</relationshipName>
    <type>Lookup</type>
</CustomField>